--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">a18jakme - assignment 4</string>
+    <string name="action_refresh">Uppdatera</string>
 </resources>
